# k8s-api-server-rs

./: Cargo.toml  README.md
.devcontainer/: on-create.sh
chart/: Chart.yaml  values.yaml
chart/templates/: apiservice.yaml  clusterrolebinding.yaml  deployment.yaml  rolebinding.yaml  service.yaml
sample-api-server/: Cargo.toml  Dockerfile
sample-api-server/src/: main.rs
