[package]
name = "sample-api-server"
keywords = ["kubernetes"]
# https://crates.io/category_slugs
categories = ["web-programming::http-server"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
k8s-openapi = { version = "0.27.0", features = ["v1_34", "schemars"] }
kube = { version = "3.0.0", features = ["derive"] }
log = "0.4.29"
rcgen = "0.14.6"
rustls = "0.23.36"
rustls-native-certs = "0.8.3"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26.4"
tower = "0.5.3"
x509-parser = "0.18.0"
